--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+                <sonar.projectKey>SVyatkin_junit-java-example</sonar.projectKey>
+                <sonar.organization>svyatkin</sonar.organization>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	
 	<dependencies>
