--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>junitmavenexample</name>
 	<url>http://maven.apache.org</url>
+<!--	SonarCloud Properties-->
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -24,40 +25,4 @@
 		</dependency>
 	</dependencies>
 
-	<pluginRepositories>
-		<pluginRepository>
-			<id>qmetrytestmanager-mvn-repo</id>
-			<url>https://raw.github.com/qmetry/qtm4j-maven-uploader/mvn-repo/</url>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
-				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
-					<useSystemClassLoader>true</useSystemClassLoader>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.qmetry</groupId>
-				<artifactId>automation</artifactId>
-				<version>1.0.2</version>
-				<executions>
-					<execution>
-						<phase>test</phase>
-						<goals>
-							<goal>JUnitFileUpload</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 </project>
