--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,43 @@
-/target/
+# Maven
+target
+# VM
+.vagrant
+.user_vagrant.rb
+# OS
 .DS_Store
+._*
+# Logs
+*.log
+# IntelliJ IDEA
+*.iml
+*.ipr
+*.iws
+.idea
+.idea/
+# Eclipse
+bin
 .classpath
-.project
 .settings/
-
+.loadpath
+.externalToolBuilders/
+*.launch
+.buildpath
+*.project
+.checkstyle
+#PMD
+.pmd
+.pmdruleset
+# Netbeans
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+# Derby
+devBootcampDS/
+derby.log
+ 
+#Hector
+tmp/
