--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 	<url>http://maven.apache.org</url>
 <!--	SonarCloud Properties-->
 	<properties>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<sonar.projectKey>SVyatkin_junit-java-example</sonar.projectKey>
 		<sonar.organization>svyatkin</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
