--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<sonar.organization>svyatkin</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -24,4 +25,37 @@
 		</dependency>
 	</dependencies>
 
+	<profiles>
+		<profile>
+			<id>sonar</id>
+			<properties>
+				<sonar.sources>.</sonar.sources>
+<!--				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>-->
+<!--				<sonar.exclusions>${code.coverage.exclusions}</sonar.exclusions>-->
+				<sonar.projectKey>SVyatkin_junit-java-example</sonar.projectKey>
+				<sonar.organization>svyatkin</sonar.organization>
+				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+			</properties>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sonarsource.scanner.maven</groupId>
+						<artifactId>sonar-maven-plugin</artifactId>
+						<version>3.7.0.1746</version>
+						<executions>
+							<execution>
+								<phase>verify</phase>
+								<goals>
+									<goal>sonar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profles>
 </project>
