--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,4 +69,4 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         shell: bash
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+#        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
