--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: CI Build with SonarCloud
 on:
   push:
     branches:
@@ -6,43 +6,17 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
-  compile:
-    runs-on: ubuntu-latest
-    name: Running Java ${{ matrix.java }} compile
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Compile code
-        run: mvn compile
-
-  test:
-    runs-on: ubuntu-latest
-    name: Running tests
-    needs: compile
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Run unit tests
-        run: mvn test
-
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: test
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 1.8
+      - name: Set up JDK 8
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 8
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
@@ -55,18 +29,8 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml -Dmaven.test.skip=true
-      - name: generate report codecov
-        run: mvn cobertura:cobertura
-      - name: Upload coverage
-        if: success()
-
-        run: |
-          curl -s https://codecov.io/bash | bash
+      - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        shell: bash
-#        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
