--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,11 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+	<distributionManagement>
+		<repository>
+			<id>junit.java.example</id>
+			<name>junit-java-example</name>
+			<url>https://maven.pkg.github.com/svyatkin/junit-java-example</url>
+		</repository>
+	</distributionManagement>
 </project>
