--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	</dependencies>
 	<distributionManagement>
 		<repository>
-			<id>junit.java.example</id>
+			<id>github</id>
 			<name>junit.java.example</name>
 			<url>https://maven.pkg.github.com/svyatkin/junit-java-example</url>
 		</repository>
